ignore synthetic methods to copy reads in MethodAnalyzer